// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should render a default, collapsed dropdown without filtering and selected values 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Country
  </OrizzonteFilterCaption>
  <div
    className="orizzonte__dropdown"
  >
    <button
      className="orizzonte__dropdown-button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      None selected
    </button>
    <ul
      className="orizzonte__dropdown-list"
    >
      <li
        className="orizzonte__dropdown-item"
        key="at.0"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        Austria
      </li>
      <li
        className="orizzonte__dropdown-item"
        key="pt.1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        Portugal
      </li>
      <li
        className="orizzonte__dropdown-item"
        key="ie.2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        Ireland
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Dropdown /> should render an expanded dropdown multiselect with filtering 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Country
  </OrizzonteFilterCaption>
  <div
    className="orizzonte__dropdown orizzonte__dropdown--focused orizzonte__dropdown--expanded"
  >
    <div
      className="orizzonte__dropdown-filter-wrapper"
    >
      <input
        className="orizzonte__dropdown-filter"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search options..."
        type="text"
      />
      <button
        className="orizzonte__dropdown-filter-button"
        onClick={[Function]}
        type="button"
      >
         
      </button>
    </div>
    <ul
      className="orizzonte__dropdown-list"
    >
      <li
        className="orizzonte__dropdown-item"
        key="at.0"
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        <OrizzonteCheckBox
          disabled={false}
          id="checkbox-4"
          label={
            <span>
              <span>
                
              </span>
              <strong
                className="orizzonte__dropdown-match"
              >
                Aus
              </strong>
              <span>
                tria
              </span>
            </span>
          }
          onChange={[Function]}
          selected={true}
          value="at"
          viewBox={
            Array [
              0,
              0,
              13,
              13,
            ]
          }
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Dropdown /> should render an expanded, grouped dropdown with a few checked options 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Country
  </OrizzonteFilterCaption>
  <div
    className="orizzonte__dropdown orizzonte__dropdown--focused orizzonte__dropdown--expanded"
  >
    <button
      className="orizzonte__dropdown-button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      United States
    </button>
    <ul
      className="orizzonte__dropdown-list"
    >
      <li
        className="orizzonte__dropdown-item"
        key="at.0"
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        <OrizzonteCheckBox
          disabled={false}
          id="checkbox-10"
          label="Austria"
          onChange={[Function]}
          selected={false}
          value="at"
          viewBox={
            Array [
              0,
              0,
              13,
              13,
            ]
          }
        />
      </li>
      <li
        className="orizzonte__dropdown-item"
        key="pt.1"
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        <OrizzonteCheckBox
          disabled={false}
          id="checkbox-11"
          label="Portugal"
          onChange={[Function]}
          selected={false}
          value="pt"
          viewBox={
            Array [
              0,
              0,
              13,
              13,
            ]
          }
        />
      </li>
      <li
        className="orizzonte__dropdown-item"
        key="ie.2"
        onKeyDown={[Function]}
        tabIndex="-1"
      >
        <OrizzonteCheckBox
          disabled={false}
          id="checkbox-12"
          label="Ireland"
          onChange={[Function]}
          selected={false}
          value="ie"
          viewBox={
            Array [
              0,
              0,
              13,
              13,
            ]
          }
        />
      </li>
      <ul
        className="orizzonte__dropdown-group"
        key="North-America.3"
      >
        <li
          className="orizzonte__dropdown-item--empty orizzonte__dropdown-group-label"
        >
          North-America
        </li>
        <li
          className="orizzonte__dropdown-item"
          key="us.3.0"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <OrizzonteCheckBox
            disabled={false}
            id="checkbox-13"
            label="United States"
            onChange={[Function]}
            selected={true}
            value="us"
            viewBox={
              Array [
                0,
                0,
                13,
                13,
              ]
            }
          />
        </li>
        <li
          className="orizzonte__dropdown-item"
          key="ca.3.1"
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <OrizzonteCheckBox
            disabled={false}
            id="checkbox-14"
            label="Canada"
            onChange={[Function]}
            selected={false}
            value="ca"
            viewBox={
              Array [
                0,
                0,
                13,
                13,
              ]
            }
          />
        </li>
      </ul>
    </ul>
  </div>
</div>
`;
